Fix overlapping buttons

--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,7 @@ body {
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
+  margin-top: 10px;
 }
 
 /* Supporting marketing content */
